--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ build/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.idea
+/.idea
+/.idea/
+.idea/*
+.idea/**
 
 ### Eclipse ###
 .apt_generated
